# infowiki

./: .gitignore  README.md  roadmap.md  syntaxrules.md
backend/: Cargo.toml  debugquit.py  diesel.toml  testscript.py
backend/migrations/2025-09-06-124416_create_page_table/: down.sql  up.sql
backend/src/: createpage.rs  errorhandling.rs  getpage.rs  grammar.pest  init.rs  main.rs  parse.rs  parser.py  tokenizer.py  updatepage.rs  users.rs  versioncontrol.rs
frontend/: home.html
